--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 numpy==1.24.4
-opencv-python==4.5.5
+opencv-python
 pose-format==0.4.1
 requests==2.31.0
 scipy==1.10.1
